finished all functionalities

--- a/Capture/Capture/Base.lproj/Main.storyboard
+++ b/Capture/Capture/Base.lproj/Main.storyboard
@@ -8,6 +8,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="RedHatMono-Light.ttf">
+            <string>RedHatMono-Light</string>
+        </array>
         <array key="RedHatMono-Regular.ttf">
             <string>RedHatMono-Regular</string>
         </array>
@@ -274,17 +277,17 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="plus" translatesAutoresizingMaskIntoConstraints="NO" id="IeI-Nt-Lwx">
-                                <rect key="frame" x="165" y="426" width="89" height="99"/>
+                                <rect key="frame" x="165" y="390" width="89" height="99"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <gestureRecognizers/>
                                 <connections>
                                     <outletCollection property="gestureRecognizers" destination="XFI-FY-QxI" appends="YES" id="chh-xF-dUr"/>
                                 </connections>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Add a new toll trip!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugi-R5-W8D">
-                                <rect key="frame" x="100" y="416" width="216" height="49"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A D D    T O L L" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ugi-R5-W8D">
+                                <rect key="frame" x="100" y="378" width="216" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="RedHatMono-Regular" family="Red Hat Mono" pointSize="13"/>
+                                <fontDescription key="fontDescription" name="RedHatMono-Light" family="Red Hat Mono" pointSize="13"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -299,7 +302,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$ 0 . 0 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PW5-Uh-O8S">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PW5-Uh-O8S">
                                 <rect key="frame" x="113" y="705" width="186" height="39"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="RedHatMono-Regular" family="Red Hat Mono" pointSize="18"/>
@@ -327,6 +330,21 @@
                                 <rect key="frame" x="144" y="811" width="125" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="i" translatesAutoresizingMaskIntoConstraints="NO" id="BiB-01-x3x">
+                                <rect key="frame" x="183" y="541" width="54" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="tnM-3C-bbo" appends="YES" id="OaG-z8-Qmf"/>
+                                </connections>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="T I C K E T S" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1I-Z4-LkW">
+                                <rect key="frame" x="158" y="519" width="102" height="18"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="RedHatMono-Light" family="Red Hat Mono" pointSize="13"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="3cm-xm-9HQ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -342,6 +360,11 @@
                 <tapGestureRecognizer id="XFI-FY-QxI">
                     <connections>
                         <action selector="addToll" destination="oBs-z9-hei" id="Cyg-aX-lE7"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <tapGestureRecognizer id="tnM-3C-bbo">
+                    <connections>
+                        <action selector="seeTickets" destination="oBs-z9-hei" id="N64-Im-xit"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
@@ -438,9 +461,55 @@
             </objects>
             <point key="canvasLocation" x="2566.666666666667" y="71.651785714285708"/>
         </scene>
+        <!--Display Tickets View Controller-->
+        <scene sceneID="SON-hv-09r">
+            <objects>
+                <viewController storyboardIdentifier="displayTickets" id="Ujr-wt-Ylf" customClass="displayTicketsViewController" customModule="Capture" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Gqz-6f-iZs">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iIZ-v1-saW">
+                                <rect key="frame" x="20" y="64" width="374" height="769"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="white" translatesAutoresizingMaskIntoConstraints="NO" id="9hs-O4-SWC">
+                                <rect key="frame" x="145" y="829" width="125" height="51"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rna-nm-Eu0">
+                                <rect key="frame" x="53" y="408" width="309" height="80"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="RedHatMono-Regular" family="Red Hat Mono" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="t97-Y1-TvE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="9hs-O4-SWC" firstAttribute="centerX" secondItem="iIZ-v1-saW" secondAttribute="centerX" id="80A-Up-e4T"/>
+                            <constraint firstItem="iIZ-v1-saW" firstAttribute="leading" secondItem="Gqz-6f-iZs" secondAttribute="leadingMargin" id="AJt-Mk-jag"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="9hs-O4-SWC" secondAttribute="bottom" constant="-18" id="D9x-9C-uOF"/>
+                            <constraint firstItem="iIZ-v1-saW" firstAttribute="top" secondItem="t97-Y1-TvE" secondAttribute="top" constant="20" id="ODo-jM-duN"/>
+                            <constraint firstItem="iIZ-v1-saW" firstAttribute="trailing" secondItem="Gqz-6f-iZs" secondAttribute="trailingMargin" id="Pwk-x2-sJG"/>
+                            <constraint firstItem="iIZ-v1-saW" firstAttribute="centerY" secondItem="Gqz-6f-iZs" secondAttribute="centerY" id="j4x-NB-tLe"/>
+                            <constraint firstItem="9hs-O4-SWC" firstAttribute="leading" secondItem="t97-Y1-TvE" secondAttribute="leading" constant="145" id="s6W-MN-ftG"/>
+                            <constraint firstItem="9hs-O4-SWC" firstAttribute="top" secondItem="t97-Y1-TvE" secondAttribute="top" constant="785" id="v5j-7P-sg7"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="goodNews" destination="rna-nm-Eu0" id="Ecp-oI-UEh"/>
+                        <outlet property="tv" destination="iIZ-v1-saW" id="fft-R5-E2Y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FP4-PJ-RMd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3308.6956521739135" y="71.651785714285708"/>
+        </scene>
     </scenes>
     <resources>
         <image name="check" width="860" height="669"/>
+        <image name="i" width="1200" height="1200"/>
         <image name="plus" width="3840" height="2160"/>
         <image name="white" width="682" height="444"/>
         <systemColor name="labelColor">
